--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="container-fluid">
 
             <a class="navbar-brand ms-5" href="index.html">
-                <img class="logo mb-2" src="img/logo.png" alt="Logo">
+                <img class="cabeza__logo mb-2" src="img/logo.png" alt="Logo">
             </a>
 
             <button class="navbar-toggler me-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
