Completando header main footer

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <section class="pie">
                 <div class="col-6 ps-4">
                     <form action="">
-                        <ul class="pie-lista">
+                        <ul class="pie__lista">
                             <li>
                                 <label for="newsletter">Newsletter:</label>
                             </li>
@@ -172,9 +172,9 @@
                 </div>
         
                 <div class="col-6 text-end pe-5">
-                    <a href="https://www.instagram.com" target="_blank"><img class="redes"  src="img/instagram.png" alt="Instagram"></a>
-                    <a href="https://www.whatsapp.com" target="_blank"><img class="redes" src="img/whatsapp.png" alt="WhatsApp"></a>
-                    <a href="https://www.facebook.com" target="_blank"><img class="redes" src="img/facebook.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank"><img class="pie__redes"  src="img/instagram.png" alt="Instagram"></a>
+                    <a href="https://www.whatsapp.com" target="_blank"><img class="pie__redes" src="img/whatsapp.png" alt="WhatsApp"></a>
+                    <a href="https://www.facebook.com" target="_blank"><img class="pie__redes" src="img/facebook.png" alt="Facebook"></a>
                 </div>
             </section>
       </footer>
