--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">                 
               <ul class="navbar-nav ms-auto me-5">
                 <li class="nav-item">
-                  <a class="nav-link active fs-5" aria-current="page" href="../index.html">Inicio</a>
+                  <a class="nav-link active fs-5" aria-current="page" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link fs-5" aria-current="page" href="pages/info.html">Info</a>
